feat: clear test calendar with unit test